--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,7 @@ img {
 }
 
 .modal {
-  max-width: 450px;
+  width: 100%;
   position: absolute;
   padding: 40px;
   background-color: var(--white-text-color);
@@ -390,6 +390,20 @@ img {
   background: #188ce8;
   color: var(--white-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 /*LAYOUT*/
