--- a/sass/componets/_modal-form.scss
+++ b/sass/componets/_modal-form.scss
@@ -1,11 +1,14 @@
 .modal {
-  max-width: 450px;
+
+  width: 100%;
   position: absolute;
   padding: 40px;
   background-color: var(--white-text-color);
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+
+
 
   &__button-close {
     display: flex;
@@ -192,4 +195,14 @@
   
 }
 
+@media screen and (min-width: 480px){
+  .modal {
+      width: 450px;
+      height: 609px;
+  }}
 
+  @media screen and (min-width: 480px){
+    .modal {
+        width: 528px;
+        height: 581px;
+    }}
